# CS100

./: README.md
Homework1/: 2.c
Homework2/: 1.c  2.c
Homework3/: main.c
Homework4/: 2.cpp  check.bat
Homework4/hw4package/: hw4_2_Sample_Linux
Homework5/: 1.cpp  2.cpp  3-v1-discard.cpp  3-v2-discard.cpp  3.cpp
Homework5/check2/: check.bat  gen.cpp  test.sh
Homework5/check3/: gen.cpp  test.sh
Homework6/: all_provided_code.cpp  all_provided_code_for_hw6.cpp
Homework6/P1/: build.sh  main.cpp
Homework6/P2/: tickets.cpp  tickets.h
Homework6/P2/check/: lotterystation.cpp  main.cpp  test.sh
Homework6/P2/discard/: build.sh  customset.h  lotterystation.h  main.cpp  tickets.cpp  tickets_opt.cpp
Homework6/P3/: build.sh  customset.h  gechatuser.cpp  gechatuser.h  main.cpp
Homework7/hw7/: CMakeLists.txt  build.sh  run.sh
Homework7/hw7/src/: CMakeLists.txt  FilteredImage.cpp  FilteredImage.hpp  ThreadedFilteredImage.cpp  ThreadedFilteredImage.hpp  image_io.cpp  image_io.hpp  types.hpp
Homework7/hw7/test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
Homework8/: CMakeLists.txt  build.sh  run.sh
Homework8/src/: Poly.hpp  functional_forms.hpp  newton.hpp
Homework8/test/: test_lambdas.cpp  test_newton.cpp  test_polynomials.cpp
SummerHomework/task1/: 1.ans  main.c
SummerHomework/task2/: main.c
SummerHomework/task3/: main.c
SummerHomework/task4/: main.c  pi.ans
slide/: .clang-format  Recitation2.v2.pptx  Recitation7.pptx  用户手册(学生).docx
slide/Homework1/: 1.c  3.c
slide/Homework2/: 3.c
slide/Homework4/: 1.cpp  check.cpp  gen.cpp
(+36 files in other folders)
